--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
         >
         <nav class="wrap">
           <ul class="link-nav">
-            <li><a class="link" href="./index.html">Agencja</a></li>
+            <li>
+              <a class="link" href="./index.html">Agencja</a>
+              <div class=""></div>
+            </li>
+
             <li>
               <a class="link" href="./goit-markup-hw-02/portfolio.html"
                 >Portfolio</a
