--- a/index.html
+++ b/index.html
@@ -26,10 +26,8 @@
         <nav class="wrap">
           <ul class="link-nav">
             <li>
-              <a class="link" href="./index.html">Agencja</a>
-              <div class=""></div>
+              <a class="link wrap-link" href="./index.html">Agencja</a>
             </li>
-
             <li>
               <a class="link" href="./goit-markup-hw-02/portfolio.html"
                 >Portfolio</a
@@ -141,7 +139,7 @@
       <section class="hedline-image">
         <div class="container">
           <h2 class="headline-2">Czym się zajmujemy</h2>
-          <ul class="list nick-name">
+          <ul class="nick-name">
             <li>
               <img
                 src="./images/komputer.jpg"
@@ -149,6 +147,7 @@
                 width="370"
                 height="294"
               />
+              <p class="text-image">APLIKACJE KOMPUTEROWE</p>
             </li>
             <li>
               <img
@@ -157,6 +156,7 @@
                 width="370"
                 height="294"
               />
+              <p class="text-image">APLIKACJE MOGILNE</p>
             </li>
             <li>
               <img
@@ -165,6 +165,7 @@
                 width="370"
                 height="294"
               />
+              <p class="text-image">ROZWIĄZANIA GRAFICZNE</p>
             </li>
           </ul>
         </div>
@@ -172,7 +173,7 @@
       <section class="hedline-images">
         <div class="container">
           <h2 class="headline-3">Nasz zespół</h2>
-          <ul class="list nick-name">
+          <ul class="nick-name">
             <li class="image">
               <img
                 src="./images/facet1.jpg"
