--- a/goit-markup-hw-02/portfolio.html
+++ b/goit-markup-hw-02/portfolio.html
@@ -27,7 +27,9 @@
           <ul class="link-nav">
             <li><a class="link" href="../index.html">Agencja</a></li>
             <li>
-              <a class="link" href="../goit-markup-hw-02/portfolio.html"
+              <a
+                class="link wrap-nav"
+                href="../goit-markup-hw-02/portfolio.html"
                 >Portfolio</a
               >
             </li>
@@ -77,10 +79,17 @@
                   width="370"
                   height="294"
                 />
+
                 <div class="subtext">
                   <h3 class="text-1">Technocrack</h3>
                   <p class="basic-text-1">Strona internetowa</p>
                 </div>
+                <p class="text-basic-item">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
               </a>
             </li>
             <li class="item">
@@ -90,6 +99,12 @@
                   <h3 class="text-1">Grafika New Orlean vs Golden Star</h3>
                   <p class="basic-text-1">Dizajn</p>
                 </div>
+                <p class="text-basic-item">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
               </a>
             </li>
             <li class="item">
@@ -104,6 +119,12 @@
                   <h3 class="text-1">Restauracja Seafood</h3>
                   <p class="basic-text-1">Aplikacja</p>
                 </div>
+                <p class="text-basic-item">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
               </a>
             </li>
             <li class="item">
@@ -118,6 +139,12 @@
                   <h3 class="text-1">Projekt Prime</h3>
                   <p class="basic-text-1">Marketing</p>
                 </div>
+                <p class="text-basic-item">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
               </a>
             </li>
             <li class="item">
@@ -131,7 +158,13 @@
                 <div class="subtext">
                   <h3 class="text-1">Projekt Boxes</h3>
                   <p class="basic-text-1">Aplikacja</p>
-                </div></a
+                </div>
+                <p class="text-basic-item">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p></a
               >
             </li>
             <li class="item">
@@ -146,6 +179,12 @@
                   <h3 class="text-1">Inspiration has no Borders</h3>
                   <p class="basic-text-1">Strona internetowa</p>
                 </div>
+                <p class="text-basic-item">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p>
               </a>
             </li>
             <li class="item">
@@ -159,7 +198,13 @@
                 <div class="subtext">
                   <h3 class="text-1">Magazyn Limited Edition</h3>
                   <p class="basic-text-1">Dizajn</p>
-                </div></a
+                </div>
+                <p class="text-basic-item">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p></a
               >
             </li>
             <li class="item">
@@ -173,7 +218,13 @@
                 <div class="subtext">
                   <h3 class="text-1">Projekt LBA</h3>
                   <p class="basic-text-1">Marketing</p>
-                </div></a
+                </div>
+                <p class="text-basic-item">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p></a
               >
             </li>
             <li class="item">
@@ -187,7 +238,13 @@
                 <div class="subtext">
                   <h3 class="text-1">Growing Business</h3>
                   <p class="basic-text-1">Aplikacja</p>
-                </div></a
+                </div>
+                <p class="text-basic-item">
+                  Technocrack jest popularną platformą wykorzystywaną do
+                  rozpowszechniania koronawirusa. Firmy wykorzystują tę
+                  platformę do celów szpiegowskich i ataków na niezabezpieczone
+                  serwery konkurencji
+                </p></a
               >
             </li>
           </ul>
