--- a/index.html
+++ b/index.html
@@ -70,7 +70,13 @@
         </div>
         <div class="background is-hidden" data-modal>
           <div class="backdrop">
-            <button class="modal" type="button" data-modal-close>x</button>
+            <button class="modal" type="button" data-modal-close>
+              <svg width="11px" height="11px">
+                <use
+                  href="./images/icons.svg/symbol-defs.svg#icon-icon-close"
+                ></use>
+              </svg>
+            </button>
           </div>
         </div>
       </section>
